# rubik-optimal

./: .gitignore  AGENTS.md  LICENSE  README.md  REPRODUCIBILITY.md  THIRD_PARTY_NOTICES.md  main.lof  main.lot  pyproject.toml
docs/: 3x3_thesis_questions_answered.md  DEEP_REVIEW_2026-06-10.md  IMPLEMENTATION_REVIEW_2026-06.md  SOURCES_TO_FETCH.md  THIRD_PARTY_NOTICES.md  WORSTCASE_HEURISTIC_DESIGN.md  WRITING_PASS_BRIEF.md  acceptance.md  ai_assistance_disclosure_draft.md  architecture_plan.md  benchmark_plan.md  codex_phase_prompts.md  codex_setup.md  completion_audit_matrix.md  deep_review_2026-06-10_findings.json  final_audit.md  final_metadata_packet.md  final_metadata_values.template.json  final_supervisor_approval.template.md  goal.md  implementation_spec.md  limitations.md  progress.md  reference_thesis_calibration.md  repository_hygiene_runbook.md  requirements_from_brief.md  research_notes.md  research_plan.md  roadmap_to_delivered_thesis.md  scope_and_hardware_reality.md  source_state_reproducibility.md  supervisor_handoff_request.md  supervisor_questions.md  thesis_structure.md  writing_audit_2026-06-11.md  writing_style_guide.md
rubik_optimal/: __init__.py
scripts/: apply_final_metadata.py  benchmark_edge_pdb_coverage.py  benchmark_h48_batch_overhead.py  benchmark_h48_batch_partial_timeout_recovery.py  benchmark_h48_lower_bound_batch.py  benchmark_h48_lower_bound_partial_timeout_recovery.py  benchmark_h48_resident_oracle.py  benchmark_h48_resident_timeout_survival.py  benchmark_h48_solver_levels.py  benchmark_h48_trusted_table.py  compare_heuristics.py  (+67 more)
(+699 files in other folders)
